# [[file:lbfgsb.note::56fdcc09][56fdcc09]]
[package]
name = "lbfgsb"
edition = "2021"
version = "0.1.1"
description = "Rust wrapper for L-BFGS-B-C, a C version of the L-BFGS-B algorithm by Stephen Becker"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
anyhow = "1"

[build-dependencies]
cc = "1"
bindgen = "0.65.1"

[dev-dependencies]
vecfx = { version = "0.1" }
# 56fdcc09 ends here
